# Lab02_18106196

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dbt.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: classify_period.sql
dbt_project/models/marts/: mart_voos_por_empresa.sql  mart_voos_por_rota.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_voos.sql
dbt_project/tests/: assert_passageiros_positivos.sql  assert_voos_validos.sql
docs/: graficos.md  metricas.md
gx/gx/: great_expectations.yml
gx/gx/checkpoints/: anac_checkpoint.yml
gx/gx/expectations/: .ge_store_backend_id  anac_expectation_suite.json
metabase_data/: dashboard_bkp.json
metabase_data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
sql/: ddl.sql
src/: config.yaml  main.py  utils.py
src/ingestion/: job.py  kaggle_client.py
src/load/: job.py
src/processing/: job.py  report.py  schema.py  visualization.py
src/quality/: validate_raw.py
